Fixed output directory for launcher and Tests, required due to global setting of data folder.

--- a/Tests/QuantConnect.Tests.VS17.csproj
+++ b/Tests/QuantConnect.Tests.VS17.csproj
@@ -5,7 +5,8 @@
     <LangVersion>6</LangVersion>
     <RootNamespace>QuantConnect.Tests</RootNamespace>
     <AssemblyName>QuantConnect.Tests</AssemblyName>
-     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="RegressionAlgorithms\Test_Cash.cs" />
