--- a/Algorithm/QuantConnect.Algorithm.VS17.csproj
+++ b/Algorithm/QuantConnect.Algorithm.VS17.csproj
@@ -23,4 +23,7 @@
     <ProjectReference Include="..\Common\QuantConnect.VS17.csproj" />
     <ProjectReference Include="..\Logging\QuantConnect.Logging.VS17.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
 </Project>
