--- a/Jupyter/QuantConnect.Jupyter.VS17.csproj
+++ b/Jupyter/QuantConnect.Jupyter.VS17.csproj
@@ -35,4 +35,7 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
 </Project>
