--- a/Indicators/QuantConnect.Indicators.VS17.csproj
+++ b/Indicators/QuantConnect.Indicators.VS17.csproj
@@ -20,4 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Common\QuantConnect.VS17.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
 </Project>
