--- a/Tests/QuantConnect.Tests.VS17.csproj
+++ b/Tests/QuantConnect.Tests.VS17.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="WebSocket4Net" Version="0.14.1.0" />
     <PackageReference Include="WebSocketSharpFork" Version="1.0.4.0" />
     <PackageReference Include="QuantConnect.pythonnet" Version="1.0.5.5" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="QuantConnect.Fxcm, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Brokerages\Fxcm\QuantConnect.Fxcm.dll</HintPath>
