--- a/ToolBox/QuantConnect.ToolBox.VS17.csproj
+++ b/ToolBox/QuantConnect.ToolBox.VS17.csproj
@@ -16,12 +16,12 @@
     <PackageReference Include="DotNetZip" Version="1.10.1" />
     <PackageReference Include="EngineIoClientDotNet" Version="0.9.22" />
     <PackageReference Include="IKVM" Version="7.3.4830" />
-
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="NodaTime" Version="1.3.4" />
     <PackageReference Include="SevenZipSharp" Version="0.64" />
     <PackageReference Include="SocketIoClientDotNet" Version="0.9.13" />
     <PackageReference Include="WebSocket4Net" Version="0.14.1" />
+    <Reference Include="Microsoft.CSharp" />
 
     <Reference Include="QuantConnect.Fxcm">
       <HintPath>..\Brokerages\Fxcm\QuantConnect.Fxcm.dll</HintPath>
