--- a/Configuration/QuantConnect.Configuration.VS17.csproj
+++ b/Configuration/QuantConnect.Configuration.VS17.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>QuantConnect.Configuration</RootNamespace>
     <AssemblyName>QuantConnect.Configuration</AssemblyName>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
