--- a/Queues/QuantConnect.Queues.VS17.csproj
+++ b/Queues/QuantConnect.Queues.VS17.csproj
@@ -7,6 +7,7 @@
     <AssemblyName>QuantConnect.Queues</AssemblyName>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
