--- a/AlgorithmFactory/QuantConnect.AlgorithmFactory.VS17.csproj
+++ b/AlgorithmFactory/QuantConnect.AlgorithmFactory.VS17.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>QuantConnect.AlgorithmFactory</RootNamespace>
     <AssemblyName>QuantConnect.AlgorithmFactory</AssemblyName>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NodaTime" Version="1.3.4" />
