--- a/Api/QuantConnect.Api.VS17.csproj
+++ b/Api/QuantConnect.Api.VS17.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DotNetZip" Version="1.10.1" />
