--- a/Common/QuantConnect.VS17.csproj
+++ b/Common/QuantConnect.VS17.csproj
@@ -7,6 +7,7 @@
     <LangVersion>6</LangVersion>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CloneExtensions" Version="1.3.0" />
