--- a/Engine/QuantConnect.Lean.Engine.VS17.csproj
+++ b/Engine/QuantConnect.Lean.Engine.VS17.csproj
@@ -7,6 +7,7 @@
     <AssemblyName>QuantConnect.Lean.Engine</AssemblyName>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DotNetZip" Version="1.10.1" />
